--- a/src/main/resources/templates/WebQuanLy/discount-campaign-form.html
+++ b/src/main/resources/templates/WebQuanLy/discount-campaign-form.html
@@ -429,5 +429,7 @@
         document.getElementById("discountForm").submit();
     });
 </script>
+<script th:src="@{/js/notification.js}"></script>
+
 </body>
 </html>
