--- a/src/main/resources/templates/WebQuanLy/hoa-don.html
+++ b/src/main/resources/templates/WebQuanLy/hoa-don.html
@@ -1000,5 +1000,6 @@
     loadHoaDonList(0, 5, "", "", "", "Giao hàng", "delivery");
   };
 </script>
+<script th:src="@{/js/notification.js}"></script>
 </body>
 </html>
