--- a/src/main/resources/templates/WebQuanLy/thong-ke.html
+++ b/src/main/resources/templates/WebQuanLy/thong-ke.html
@@ -452,7 +452,6 @@
     window.location.href = '/acvstore/thong-ke/export?' + new URLSearchParams(new FormData(document.getElementById('filterForm'))).toString();
   }
 </script>
-
-
+<script th:src="@{/js/notification.js}"></script>
 </body>
 </html>
