--- a/src/main/resources/templates/WebQuanLy/voucher-create.html
+++ b/src/main/resources/templates/WebQuanLy/voucher-create.html
@@ -371,5 +371,7 @@
         if (!isPercent) $('#giaTriGiamToiDa').val('');
     }
 </script>
+<script th:src="@{/js/notification.js}"></script>
+
 </body>
 </html>
