--- a/src/main/resources/templates/WebQuanLy/voucher-detail.html
+++ b/src/main/resources/templates/WebQuanLy/voucher-detail.html
@@ -447,5 +447,7 @@
         if (infoToastEl) new bootstrap.Toast(infoToastEl).show();
     });
 </script>
+<script th:src="@{/js/notification.js}"></script>
+
 </body>
 </html>
