--- a/src/main/resources/templates/WebQuanLy/xuat-xu.html
+++ b/src/main/resources/templates/WebQuanLy/xuat-xu.html
@@ -753,5 +753,6 @@
         document.getElementById('xuatXuName').value = name;
     }
 </script>
+<script th:src="@{/js/notification.js}"></script>
 </body>
 </html>
