--- a/src/main/resources/templates/WebQuanLy/vi/tong-hop.html
+++ b/src/main/resources/templates/WebQuanLy/vi/tong-hop.html
@@ -123,5 +123,7 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/js/notification.js}"></script>
+
 </body>
 </html>
